styles/main.css
html {
    font-size: 16px;
}
body {
    padding: 0;
    margin: 0;
    background-color: #444444;
    z-index: -1;
    color: black;
}

:root {
    --themeGreen: rgb(25,255,25);
}

.sectionDescription {
    width: 80%;
    font-size: 18px;
    text-align: center;
    line-height: 1.05;
    color: var(--themeGreen);
}

.vcenter {
    display: flex;
    align-items: center;
}
.max-w-1200 {
    max-width: 1200px !important;
}
.separator {
    border-bottom: 1px solid var(--themeGreen);
    margin: 1vmin 0 1vmin 0;
}
.bg-test {
    background-color: rgba(137, 43, 226, 0.61);
}

.bg-test2 {
    background-color: rgba(0, 0, 0, 0.719);
}

#terminal-container {
    margin-top: 20vh;
    margin-left: auto;
    margin-right: auto;
    height: 70%;
    width: 90%;
    box-shadow: 1vw 1vw 2vw black;
}

#buttonABTME {
    position: absolute;
    left: 50%;
    margin-left: -100px !important;
    bottom: 0   ;
    width: 200px;
    height: 50px;
    font-size: 1.4em;
    line-height: 50px;
    text-align: center;
    margin: 20px auto;
    border: 1px solid white;
    color: white;
}

/* .pos-topright {
    right: 0;
    top: 0;
}

.pos-bottomleft {
    left: 0;
    bottom: 0;
} */

.backImg {
    background-image: url('../img/bg2.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-origin: content-box;
    
}

.topPanel {
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
    position: relative;
}


 #navPanel {
    width: 100%;
    height: 100%;
    background-color: rgba(20, 20, 20, 0.37);
    
 }

.navTile {
    position: relative;
    width: 33.33%;
    height: 50%;   
    padding-bottom: 2vh;
    /* border: 2px solid white; */
    color: lavender;
}

.navTile:hover {
    background-color: rgba(20, 20, 20, 0);
    color: rgb(25, 255, 25);
    cursor: pointer;
    transition: color 0.4s;
}
.iconHolder {
    height: 80%;
    width: 100%;
}
.iconHolder i::before {
    font-size: 3em;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}
.navTile.cap {
    position: absolute;
    bottom: 5%;
    width: 100%;
    height: 20%;
}

.navTile a {
    transform: none;
    color: lavender;
}
.navTile a:hover {
    transform: none;
    background-color: rgba(20, 20, 20, 0.219);
    color: rgb(25, 255, 25);
    cursor: pointer;
    transition: color 0.4s;
    text-decoration: none;
}
.cap p {
    text-align: center;
    font-size: 0.7em;
    padding-top: 1vh;
    margin: 0;
}
 .navItem {
     text-align: center;
 }

/* #region ABOUT ME PANEL */
#aboutMePanel {
    /* background-color: rgb(8, 8, 8); */
    color: white;
}

#aboutMePanel p {
    text-align: left;
    margin: 0 10vw 0 10vw;
    /* font-size: 3vmin; */
    font-size: 18px;
}
#aboutMePanel h1 {
    text-align: center;
    font-size: 24px;
}
/* #endregion */
 



.midPanel {
    /* background-color: rgb(8, 8, 8); */
    background-image: url(../img/twinkle.png);
    
    /* background: linear-gradient(114.05035649829483deg, rgba(3, 1, 13,1) 30.245441755124453%,rgba(3, 1, 13,1) 31.316803261499516%,rgba(0, 0, 0,1) 76.99576203330892%); */
    padding: 5vh 0;
}

/* #region PROJECTS */
.col-12 h1 {
    color: white;
    font-size: 24px;
    text-align: center;
}
.projectTile {
    background-color: rgb(172, 172, 172);
    position: relative;
    border: 2px solid #444444;
}
.projectTile img {
    position: absolute;
    width: 100%;
    height: 100%;
}

.projectTile:hover .projectCap {
    opacity: 100%;
    transition: opacity 1.5s;
}


.projectCap {
    opacity: 0;
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: #0000007e;
    color: white;
    text-align: center;
    font-size: 1.5rem;
    z-index: 1;
}

.centerContent {
    display: flex;
    justify-content: center;
    align-items: center;
  }

.githubLink {
    margin: 1vmin;
    color: white;
    text-transform: none;
    text-decoration: none;
}

.githubLink i::before {
    margin: 1vmin;
    color: white;
    text-transform: none;
    text-decoration: none;
}

.githubLink:hover {
    color: inherit;
    text-decoration: none;
}


.projectInfoBtn {
    height: 3vh;
    width: 100%;
    background-color: rgb(8, 8, 8);
    /* border-bottom: 1px solid rgb(25, 255, 25); */
    /* border-radius: 10%; */
}

.projectInfoBtn_border {
    width: 20%;
    border: 1px solid var(--themeGreen);
}

.projectInfo {
    color: white;
    background-color: rgb(8, 8, 8);
    /* font-size: 3vmin; */
    font-size: 16px;

}
.statusReady {
    color: green;
}
.statusDev {
    color: red;
}
.projectInfo p {
    margin-bottom: 0;
}
.projectInfoBtn:hover { 
    cursor: pointer; 
}
.btnFilled {
    background-color: var(--themeGreen);
    transition: background-color 1s;
}
.projectInfoBtn:hover .projectInfoBtn_border {
    width: 100%;
    transition: width .5s;
}

/* #endregion */

/* #region SKILLS */

.langs {
    padding-left: 10vmin;
    padding-right: 10vmin;
    background-image: url(../img/twinkle.png);
}
.lang-bg {
    background-color:rgba(25, 255, 25, 0);
    border-radius: 4%;
}
.topLogos {
    width: 50%;
}
.logoHolder {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 2vh;
}

.logoHolder-minor {
    width: 50%;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
}


/* #endregion */


/* #region FOOTER / CONTACT */
#contact {
    padding-bottom: 20px;
    background-color: rgb(22, 22, 22);
}
footer {
    /* height: 20vh; */
    font-size: 16px;
}
#contact i::before {
    margin: 1vw;
    color: white;
    text-transform: none;
    text-decoration: none;
}
.contact-bg {
    opacity: 1;
    background-image: url('../img/bg_network.jpg');
    background-position: center;
    background-size: cover;
}
#contact a:hover {
    color: inherit;
    text-transform: none;
    text-decoration: none;
}

.signature {
    font-size: 10px;
    text-align: center;
    color: rgb(114, 114, 114);
  }
  .signature p{
    margin: 0;
  }
  .signature a{
    color: rgb(114, 114, 114);

  }
  .signature a:hover{
    color: rgb(94, 94, 94);
  }

/* #endregion */

/* #region SIDENAV */



.sidenav {
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    width: 69px;
    font-size: 16px;
    background-color: rgba(70, 70, 70, 0.452);
    z-index: 1;
    transition: 
        font-size .6s,
        height .6s ease-out,
        width .6s ease-out;
}

.sidenav-short {
    /* height: 40vh !important; */
    border-bottom-right-radius: 5px;
    width: 50px;
    font-size: 13px;

    transition: 
        font-size .6s,
        /* height .6s ease-out, */
        width .6s ease-out;
}

.sidenav .caption {
    text-align: center;
    font-size: 0.7em;
    text-transform: uppercase;
    margin: 0 4px;
}

.mp {
    font-size: 1.5em;
    text-align: center;
    margin: 10px 0;
    font-weight: bold;
}

.sidenav-icon {
    height: auto;
    width: auto;
    text-align: center;
}
.sidenav-icon i::before {
    font-size: 2.2em;
    margin: 0;  
}

.side-navTile {
    width: 100%;
    max-height: 69px;  
    /* border: 2px solid white; */
    color: lavender;
    margin: 6px 0;
}


.side-navTile:hover {
    background-color: rgba(20, 20, 20, 0);
    color: rgb(25, 255, 25);
    cursor: pointer;
    transition: color 0.4s;
}

.sidenav .separator {
    margin: 20px 0;
    width: 100%;
    border-bottom: 2px solid var(--themeGreen);
}

.side-navTile a {
    transform: none;
    color: lavender;
}
.sidenav a:hover {
    transform: none;
    background-color: rgba(20, 20, 20, 0.219);
    color: rgb(25, 255, 25);
    cursor: pointer;
    transition: color 0.4s;
    text-decoration: none;
}

/* #endregion */

